Modify quota tests for 6.x